# bracket-colors

./: CMakeLists.txt  README.md
src/: BracketMap.cc  BracketMap.h  CMakeLists.txt  bracket-colors.cc  bracketcolors.cc  utils.h
